<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>DecentHolograms</artifactId>
        <groupId>eu.decentsoftware</groupId>
        <version>3.0.0</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>decent-holograms-plugin</artifactId>

    <properties>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <shadedPattern>eu.decentsoftware.holograms.libs</shadedPattern>
    </properties>

    <repositories>
        <repository>
            <id>skullcreator-repo</id>
            <url>https://github.com/deanveloper/SkullCreator/raw/mvn-repo/</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- API -->
        <dependency>
            <groupId>eu.decentsoftware</groupId>
            <artifactId>decent-holograms-api</artifactId>
            <version>${project.parent.version}</version>
        </dependency>
        <!-- SpigotAPI -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <scope>provided</scope>
        </dependency>
        <!-- PlaceholderAPI -->
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.2</version>
            <scope>provided</scope>
        </dependency>
        <!-- Vault -->
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.bukkit</groupId>
                    <artifactId>bukkit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!-- HeadDatabaseAPI -->
        <dependency>
            <groupId>com.arcaniax</groupId>
            <artifactId>HeadDatabase-API</artifactId>
            <version>1.3.1</version>
            <scope>provided</scope>
        </dependency>
        <!-- XSeries -->
        <dependency>
            <groupId>com.github.cryptomorin</groupId>
            <artifactId>XSeries</artifactId>
            <version>9.0.0</version>
        </dependency>
        <!-- Particle -->
        <dependency>
            <groupId>xyz.xenondevs</groupId>
            <artifactId>particle</artifactId>
            <version>1.8.1</version>
        </dependency>
        <!-- Skull Creator -->
        <dependency>
            <groupId>dev.dbassett</groupId>
            <artifactId>skullcreator</artifactId>
            <version>3.0.1</version>
        </dependency>
        <!-- Adventure -->
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-platform-bukkit</artifactId>
            <version>4.1.2</version>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-minimessage</artifactId>
            <version>4.11.0</version>
        </dependency>
        <!-- Cloud -->
        <dependency>
            <groupId>cloud.commandframework</groupId>
            <artifactId>cloud-core</artifactId>
            <version>1.7.1</version>
        </dependency>
        <dependency>
            <groupId>cloud.commandframework</groupId>
            <artifactId>cloud-bukkit</artifactId>
            <version>1.7.1</version>
        </dependency>
        <!-- NMS Versions -->
        <dependency>
            <groupId>eu.decentsoftware</groupId>
            <artifactId>decent-holograms-v1_8_R3</artifactId>
            <version>${project.parent.version}</version>
        </dependency>
    </dependencies>

    <build>
        <finalName>DecentHolograms-${project.parent.version}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <minimizeJar>false</minimizeJar>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                            </transformers>
                            <relocations>
                                <relocation>
                                    <pattern>net.kyori</pattern>
                                    <shadedPattern>${shadedPattern}.kyori</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>cloud</pattern>
                                    <shadedPattern>${shadedPattern}.cloud</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.cryptomorin.xseries</pattern>
                                    <shadedPattern>${shadedPattern}.xseries</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>xyz.xenondevs.particle</pattern>
                                    <shadedPattern>${shadedPattern}.particle</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>dev.dbassett.skullcreator</pattern>
                                    <shadedPattern>${shadedPattern}.skullcreator</shadedPattern>
                                </relocation>
                            </relocations>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>module-info.class</exclude>
                                        <exclude>META-INF/**</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

</project>